/*
 * $Id$
 */

2010-04-26 00:34 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  GNUmakefile
  *  makefile.bcc
  *  makefile.gcc
  *  makefile.vc
  -  src/hrbcompat/misc/wx_functions.cpp
  +  src/common/wx_functions.cpp
     * moving wx_functions.cpp to src/common dir

  *  src/raddox/TField.prg
     + adding method:
       + CopyFrom( AField ) : to copy relevant data from source TField
     + adding property:
       + RawDefaultValue : to get the value of the protedted ::FDefalutValue

  *  src/raddox/TTable.prg
     ! Fixed setting the value for the current FFieldList to the one in the
       stack to be used

2010-04-22 14:55 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  src/common/wxhfuncs.prg
     * added wxhAltD() function to fix bug that AltD() doesn't call garbage
       collector

2010-04-21 16:24 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  include/wxHarbour/raddox.ch
  *  src/raddox/TField.prg
  *  src/raddox/TTable.prg
     * added EVENT for OnAfterChange to fire when an changed register is
       posted, it checks for any changed field's

2010-04-18 23:14 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  src/wxbase/pickers/wx_DatePickerCtrl.cpp
     ! Fixed bug in calculating the month value returned by wxDateTime:GetMonth()
       ; Thanks to Jerry Finuliar for pointing & provide solution.

2010-04-16 09:40 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  +  config/hbmk.hbm
     * config file to help building binaries with hbmk2 utility
       ( thanks to Jerry Finuliar )

  *  build_bkls.sh
  +  demos/dbExplorer/hbmk.hbm
  +  demos/helloworld/hbmk.hbm
  +  samples/arrbrowser/hbmk.hbm
  +  samples/auinotebook/hbmk.hbm
  +  samples/bitmapButton/hbmk.hbm
  +  samples/button/hbmk.hbm
  +  samples/checkbox/hbmk.hbm
  +  samples/choice/hbmk.hbm
  +  samples/combobox/hbmk.hbm
  +  samples/dbbrowser/hbmk.hbm
  +  samples/dbf_ctrls1/hbmk.hbm
  +  samples/gauge/hbmk.hbm
  +  samples/grid/hbmk.hbm